# NeuroTrain

./: .cursorignore  .env.example  .gitignore  README.md  README_LLM_TRAINING.md  TODO  TODO.md  a.ipynb  a.py  anaylzer.py  b.py  colab.ipynb  config.py  debugger.ipynb  emoe.ipynb  inference.py  lib.sh  llava.py  llm.ipynb  main.py  main_deepspeed.py  main_pipeline.py  model_operation.py  net.ipynb  options.py  painter.ipynb  peft.ipynb  predict.ipynb  pyproject.toml  qwen.py  requirements.txt  run.py  run_monitor.py  start_web_monitor.py  t.ipynb  t.py  test_deepspeed.sh  test_deepspeed_drive.sh  test_deepspeed_simple.sh  test_mnist.py  (+6 more)
.cursor/rules/: env.mdc
.github/workflows/: test.yml
config/: dataset-template.toml  train-template.json
configs/: dataset-template.yaml  ddp_example.toml  ddp_example.yaml  ddp_large_model.toml  ddp_quick_test.toml  ddp_segmentation.toml  deepspeed_drive_unet.toml  deepspeed_example.yaml  deepspeed_quick_test.toml  llm_training_example.toml  painter.toml  pipeline-drive-chasedb1-stare.toml  pipeline-template.json  quantization_example.yaml  qwen_training_example.toml  train-chasedb1.toml  train-drive.toml  train-stare.toml  train-template.json  train-template.toml  vlm_training_example.toml
configs/cacher/: data_cacher.toml
configs/dataset/: amos2022.yaml  brats2020.yaml  cifar100_classification.yaml  cifar10_classification.yaml  coco_detection.yaml  coco_segmentation.yaml  dataset-template.yaml  hybrid_example.yaml  imagenet.yaml  mnist.yaml  refcoco.yaml
docs/: ADVANCED_FEATURES_GUIDE.md  ARCHITECTURE.md  AUTO_CACHE_GUIDE.md  CACHE_FEATURE_CHANGELOG.md  CACHE_PATH_UPDATE.md  CACHE_V2_UPDATE.md  DATASET_CACHE_README.md  DATASET_MODULE.md  DATA_TO_LATEX_SUMMARY.md  ENGINE_MODULE.md  FEATURES_SUMMARY.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LLM_VLM_TRAINING_GUIDE.md  LORA_TOOLS_SUMMARY.md  METRICS_MODULE.md  MIXED_METRICS_GUIDE.md  MODELS_MODULE.md  MONITOR_DEMO_SUMMARY.md  PREFETCH_GUIDE.md  PREFETCH_UPDATE.md  QUICK_REFERENCE.md  README.md  README_ddp.md  README_ddp_toml.md  README_deepspeed.md  SUMMARY.md  TABLE_STYLES_GUIDE.md  TEMPLATE_FEATURE_SUMMARY.md  UTILS_AND_TOOLS.md  cache_feature_summary.md  colab.md  data_to_latex_examples.md  data_to_latex_quickref.md  dataloader_usage.md  dataset_cache.md  dataset_sampling.md  demo_mixed_metrics.sh  example_data.csv  (+12 more)
examples/: README.md  auto_cache_demo.py  complete_training_example.py  complete_workflow_tutorial.ipynb  concept_demo.py  dataset_basic_example.py  dataset_cache_example.py  dataset_tutorial.ipynb  deepspeed_example.py  dpo_dataset_example.txt  entity_moe_example.py  lora_example.py  mnist_with_cache_demo.py  models_basic_example.py  monitor_demo.py  prefetch_demo.py  ptq_qat_examples.py  quantization_demo.ipynb  quantization_examples.py  sft_dataset_example.txt  simple_monitor_demo.py  visual_demo.py
models/: __init__.py  axial_attn.py  embedding.py  image_reconstruction.py  models.py  position_encoding.py
scripts/: EXAMPLES.md  README.md  analyze.sh  check.sh  check_continue_mode.sh  deepspeed_train.sh  download_coco.sh  lib.sh  run_all.sh  run_ddp.sh  run_ddp_toml.sh  run_deepspeed.sh  run_monitor.sh  run_multicard.sh  run_quick_test.py  run_single.sh  run_tests.py  test-check.sh  test_all_tasks_ddp.sh  test_feature_multicard.sh  test_feature_single.sh  train.sh  train_llm.py  valid_check.sh
src/: config.py  constants.py  defines.py  download_pretrained.py  main_monitor.py  options.py  paths.py  pretrained_manager.py
tools/: README.md  advanced_visualizer.py  analyzer.py  attention_visualizer.py  attn_show.py  checker.py  cleanup.py  clear_logs.py  config_converter.py  data_cacher.py  data_to_latex.py  dataset_cache_tool.py  dataset_to_parquet.py  download_data.py  draw_cam.py  env_local_builder.py  error_analyzer.py  extracter.py  heatmap_all.py  latex_example.tex  list_datasets.py  lora_merge.py  onnx_export.py  quantization_cli.py  report_generator.py  simple_heatmap.py  table_painter.py  to_parquet.py
utils/: __init__.py  annotation.py  criterion.py  data_saver.py  db.py  early_stopping.py  email_sender.py  painter.py  postprocess.py  recorder.py  scores.py  see_cam.py  timer.py  transform.py  typed.py  util.py  utils.py
(+308 files in other folders)
