[project]
name = "neurotrain"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.9.0",
    "fastparquet>=2024.11.0",
    "fvcore>=0.1.5.post20221221",
    "gputil>=1.4.0",
    "grad-cam>=1.5.5",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "timm>=1.0.15",
    "toml>=0.10.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.9",
]

