[project]
name = "neurotrain"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "axial-attention>=0.6.1",
    "colorlog>=6.9.0",
    "einops>=0.8.1",
    "fastparquet>=2024.11.0",
    "fvcore>=0.1.5.post20221221",
    "gputil>=1.4.0",
    "grad-cam>=1.5.5",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nibabel>=5.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "peft>=0.16.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "segment-anything>=1.0",
    "sentencepiece>=0.2.0",
    "sqlmodel>=0.0.24",
    "timm>=1.0.15",
    "toml>=0.10.2",
    "torch==2.3.0",
    "torchaudio==2.3.0",
    "torchsummary>=1.5.1",
    "torchvision==0.18.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "wandb>=0.19.9",
]

