[project]
name = "neurotrain"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "axial-attention>=0.6.1",
    "fastapi>=0.115.0",
    "colorlog>=6.9.0",
    "einops>=0.8.1",
    "fastparquet>=2024.11.0",
    "fvcore>=0.1.5.post20221221",
    "gputil>=1.4.0",
    "grad-cam>=1.5.5",
    "gradio>=5.38.2",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nibabel>=5.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "python-socketio>=5.11.4",
    "pycocotools>=2.0.7",
    "peft>=0.16.0",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "rich>=14.0.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "segment-anything>=1.0",
    "sentencepiece>=0.2.1",
    "sqlmodel>=0.0.24",
    "streamlit>=1.39.0",
    "timm>=1.0.15",
    "toml>=0.10.2",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchvision==0.22.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.32.0",
    "transformers>=4.51.3",
    "wandb>=0.19.9",
    "webcolors>=24.11.1",
    "curl-cffi>=0.13.0",
    "umap-learn>=0.5.9.post2",
]
# --extra cu118 cu126 cu128 cpu
[project.optional-dependencies]
cpu = [
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "torchaudio>=2.7.1",
]
cu128 = [
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "torchaudio>=2.7.1",
]
cu126 = [
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "torchaudio>=2.7.1",
]
cu118 = [
  "torch>=2.7.1",
  "torchvision>=0.22.1",
  "torchaudio>=2.7.1",
]
deepspeed = [
  "deepspeed",
]
bitsandbytes = [
  "bitsandbytes",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu126" },
    { extra = "cu118" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu118", extra = "cu118" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu118", extra = "cu118" },
]
torchaudio = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu126", extra = "cu126" },
  { index = "pytorch-cu118", extra = "cu118" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://mirrors.nju.edu.cn/pytorch/whl/cu118"
explicit = true
